<resources>
    <string name="app_name">thingbee_android</string>
    <string name="title_activity_settings">Settings</string>
    <!-- Preference Titles -->

    <!-- Messages Preferences -->
    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <!--연락처-->
    <string name="contract">연락처</string>
    <string name="add_contract">연락처 추가</string>
    <!--지도표시설정-->
    <string name="btn_status">호출버튼 표시 설정</string>
    <string name="stats">통계</string>
    <string name="stats_summary">통계 화면에 버튼을 표시합니다.</string>
    <string name="news">뉴스</string>
    <string name="news_summary">뉴스 화면에 버튼을 표시합니다.</string>
    <string name="panicButton">비상 호출버튼 표시 </string>
    <string name="panicButton_summary">화면에 항상 비상호출 버튼을 표시합니다.</string>
    <string name="path">길찾기</string>
    <string name="path_summary">길찾기 화면에 버튼을 표시합니다.</string>
    <!--페이크 콜/ 호출 관련-->
    <string name="emergency">비상호출 설정</string>
    <string name="emergency_active">비상호출 동작 설정</string>
    <string name="fakecall_cooltime">페이크 콜 대기 시간 </string>
    <string name="fakecall_default">2</string>
    <string name="fakecall_summary">페이크 콜 대기 시간 설정</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <!--지도 관련 -->
    <string name="searchPlace">장소 또는 주소 검색</string>
    <string name="start">출발지</string>
    <string name="end">도착지</string>
    <string name="noSearch">검색 결과가 없어요</string>


    <string name="tMapKey">eb78e65f-0177-4506-bec2-e7fbb962fb09</string>
    <string name="tMapURL">https://apis.openapi.sk.com/tmap</string>
    <string name="findPathURL">https://apis.openapi.sk.com/tmap/routes/pedestrian</string>
    <string name="searchPlaceURL">https://apis.openapi.sk.com/tmap/pois</string>
    <string name="reverseGeoCodingURL">https://apis.openapi.sk.com/tmap/geo/reversegeocoding</string>


    <string name="searchFacilityURL">http://think.powerlinux.co.kr/api/map/search/mobile</string>
    <string name="facilityDetailURL">http://think.powerlinux.co.kr/api/map/detail</string>
    <string name="aroundFacilityURL">http://think.powerlinux.co.kr/api/map/search/around</string>
    <string name="calcDistanceURL">http://think.pwoerlinux.co.kr/api/map/distance</string>
    <string name="searchSafePathURL">http://think.powerlinux.co.kr/api/map/way/safe</string>
    <string name="encoding">UTF-8</string>


</resources>
